Swagger doc for route delete film finished
